# C-Learning

./: .gitignore  CMakeLists.txt  Glossary_terms.txt  README.md
Drills/: CMakeLists.txt  HelloWorld.cpp  hello_world.cpp  objects_types_values.cpp
include/: PPP.h
